[feat] create order and assign it to a user
